# ada502public

./: .gitignore  README.md  setup.md
fireguard/: sprint1.md
peer_review/: intro.md
week11/: README.md
week12/: README.md
week13/: README.md
week15/: README.md
week15/graphql/: README.md  pyproject.toml
week15/graphql/graphql/: api.py  schema.py
week15/grpc_demo/: pyproject.toml
week15/grpc_demo/grpc_demo/: client.py  server.py
week15/grpc_demo/protos/: schema.proto
week15/serde_experiment/: experiments.ipynb  measurements.proto  requirements.txt  serde_lib.py
week17/: README.md  test-app-srv.k8s.yml  test-app.k8s.yml
week17/tf/: main.tf  providers.tf  variables.tf
week2/: setup.md
week5/: frcmlab.md
week8/: README.md
week9/: README.md
workshop_week_06/: objectives.md
workshop_week_08/: objectives.md
workshop_week_12/: objectives.md
workshop_week_12/examples/: db-depl.k8s.yml  db-pvc.k8s.yml  db-svc.k8s.yml
