[tool.poetry]
name = "graphql"
version = "0.1.0"
description = ""
authors = ["Patrick Stünkel <webminz@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
strawberry-graphql = {extras = ["debug-server"], version = "^0.224.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
